# DoubleTap.nvim

./: LICENSE  Makefile  README.md  TODO  pyproject.toml
lua/: .luarc.json
lua/DoubleTap/: config.lua  defaults.lua  doubletap.lua  dt.lua  init.lua  utils.lua
rplugin/python/: DoubleTap.py  DoubleTap2.py
rplugin/python3/: DoubleTap.py
rplugin/python3/double_tap/: DoubleTap.py  __init__.py  config.py  double_tap.py
