[tool.poetry]
name = "neovim-doubletap"
version = "0.1.0"
description = ""
authors = ["Jeff Buttars <jeffbuttars@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.1"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.8.3"
jedi = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
